--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 android {
     compileSdkVersion 29
 
+    buildFeatures {
+        viewBinding true
+    }
     defaultConfig {
         applicationId "fi.organization.skycast"
         minSdkVersion 22
@@ -45,6 +48,15 @@ dependencies {
 
     // OkHttp4
     implementation"com.squareup.okhttp3:okhttp:4.9.0"
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    // used for "by activityViewModels()"
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+
+
 
     // Retrofit
     // 'com.squareup.retrofit2:retrofit:2.9.0'
