--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
 
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
     defaultConfig {
         applicationId "fi.organization.skycast"
@@ -55,6 +56,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     // used for "by activityViewModels()"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
+
+    // Location services
+    implementation "com.google.android.gms:play-services-location:18.0.0"
+
+    // Easy location permissions
+    implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
 
 
 
