--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     // used for "by activityViewModels()"
     implementation "androidx.fragment:fragment-ktx:1.3.3"
+    // AndroidX cardView
+    implementation "androidx.cardview:cardview:1.0.0"
 
     // Location services
     implementation "com.google.android.gms:play-services-location:18.0.0"
