--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,10 @@ dependencies {
 
     // Easy location permissions
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
 
+    // Preferences
+    implementation "androidx.preference:preference:1.1.1"
 
 
     // Retrofit
